--- a/HireUP/nbproject/project.properties
+++ b/HireUP/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.mysql-connector-j-8.0.32.jar=D:\\Installations\\DB_Drivers\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
-file.reference.mysql-connector-j-8.0.32.jar-1=/home/mutizo/Documents/Github/HR-Java-EE/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar-1=/home/godal/NetBeansProjects/School/src/java/Driver/mysql-connector-j-8.0.32.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
