--- a/HireUP 2.0/nbproject/project.properties
+++ b/HireUP 2.0/nbproject/project.properties
@@ -26,8 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=/home/godal/Documents/Java/Libraries/JSTL/Java 9 and below/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=/home/godal/Documents/Java/Libraries/JSTL/Java 9 and below/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mysql-connector-j-8.0.32.jar=/home/godal/Documents/Java/Libraries/mysql-connector-j-8.0.32.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,8 +36,7 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
+    ${file.reference.mysql-connector-j-8.0.32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
