--- a/HireUP 2.0/nbproject/project.properties
+++ b/HireUP 2.0/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.mysql-connector-j-8.0.32.jar=/home/godal/Documents/Java/Libraries/mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar=Base de Dados/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
